<resources>
    <string name="app_name">Acuity</string>

    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string name="user_profile_photo">https://fb-s-d-a.akamaihd.net/h-ak-xta1/v/t1.0-1/p160x160/13769540_1218667208144354_7226613617115535173_n.jpg?oh=4bceab9c3af370a3e74a3d60977fa50a&amp;oe=58878FC0\&amp;__gda__=1490286520_7205c4edca5b2ee3745969ca2c557191</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Password Confirmation</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password1">This password is too short</string>
    <string name="error_invalid_password2">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="create_account1">New here?</string>
    <string name="create_account2">Create an account</string>
    <string name="title_activity_sign_up">Sign up for Acuity</string>
    <string name="title_activity_login">Sign in to Acuity</string>
    <string name="title_activity_main2">Acuity</string>
    <string name="auth_failed">Sign up failed !</string>
    <string name="error_invalid_nickname">This nickname is invalid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_pass_confirm">This password confirmation doesn\'t match your password</string>
    <string name="search_hint">Search for people</string>

    <string name="interests_fragment">Hello interests fragment</string>

    <string name="my_account_fragment">Hello my account fragment</string>

    <string name="home_fragment">Hello home fragment</string>
    <string name="title_activity_scrolling">Home</string>

    <string name="title_activity_tabbed"></string>


</resources>
